# ha-habitus

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  ROADMAP.md  TASK.md  codecov.yml  config.yaml  coverage.json  progress.txt  pyproject.toml  ralph.sh  repository.yaml  run.sh
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  ha-schema-checker.md  prd-planner.md  test-runner.md
.claude/commands/: check.md  plan.md  ralph.md  review.md  status.md
.github/workflows/: ci.yml  release.yml
benchmarks/: nilm_scene_benchmark.py
benchmarks/baselines/: nilm_scene_baseline.json
habitus/: .rebuild-1772501422  CHANGELOG.md  Dockerfile  build.yaml  config.yaml  requirements.txt  run.sh  webserver.py
habitus/habitus/: activity.py  activity_hmm.py  anomaly_breakdown.py  appliance_fingerprint.py  automation_builder.py  automation_gap.py  automation_health.py  automation_score.py  battery_watchdog.py  changelog.py  conflict_detector.py  correlation_engine.py  cost_estimator.py  dashboard_generator.py  device_trainer.py  drift.py  dynamic_automations.py  energy_forecast.py  feedback.py  guest_mode.py  ha_areas.py  ha_db.py  insights.py  integration_health.py  main.py  markov_chain.py  nilm_disaggregator.py  nl_automation.py  onboarding.py  patterns.py  phantom.py  progressive.py  room_clustering.py  room_predictor.py  routine_builder.py  routine_predictor.py  scene_analysis.py  scene_detector.py  seasonal.py  seasonal_adapter.py  (+6 more)
habitus/www/: habitus-card.js
tests/: __init__.py  conftest.py  test_accumulating.py  test_activity.py  test_activity_hmm.py  test_adaptive_contamination.py  test_anomaly_breakdown.py  test_atomic_writes.py  test_automation_gap.py  test_automation_health.py  test_battery_watchdog.py  test_build_features.py  test_changelog.py  test_confidence_calibration.py  test_conflict_detector.py  test_cost_estimator.py  test_cost_integration.py  test_coverage_boost.py  test_coverage_boost2.py  test_coverage_boost3.py  test_coverage_boost4.py  test_dashboard_generator.py  test_data_quality.py  test_db_analytics_read_helpers.py  test_db_path_resolution.py  test_env_int_parsing.py  test_guest_mode.py  test_ha_integration.py  test_insights.py  test_integration_health.py  test_lovelace.py  test_main_utils.py  test_mock_coverage.py  test_nilm_disaggregator.py  test_nilm_scene_benchmark.py  test_nilm_scene_routines.py  test_nl_automation.py  test_notifications.py  test_onboarding.py  test_patterns.py  (+13 more)
tests/fixtures/: scene_confidence_golden.json
